--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
 <h2>Publications</h2>
 
 <p>
+A Unified Domain Adaptation Framework with Distinctive Divergence Analysis (IEEE Transactions on Machine Learning Research, TMLR).
+<a href=" ">[paper]</a> <br>  
+Zhiri Yuan, Xixu Hu, Qi Wu, Shumin Ma, Cheuk Hang Leung, Xin Shen, <b>Yiyan Huang </b>.
+</p>
+
+<p>
 Moderately-Balanced Representation Learning for Treatment Effects with Orthogonality Information (PRICAI2022).
 <a href=" ">[paper]</a> <br>  
 <b>Yiyan Huang </b>, Cheuk Hang Leung, Shumin Ma, Qi Wu, Dongdong Wang, Zhixiang Huang.
